shelter/style/style.css
/* ... */
.button_small_disabled path {
    fill: #CDCDCD;
}

.button_small_current {
    background-color: #f1cdb3;
}

.button_small:not(.button_small_disabled):hover {
    background-color: #fddcc4;
    border-color: #fddcc4;
}

.button_small:active {
    background-color: #f1cdb3;
}

.button_small:disabled {
    background-color: transparent;
    border-color: #CDCDCD;
    color: #CDCDCD;
}

/* Logo */

.logo {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.logo__title {
    font-family: "Georgia", "Times New Roman", "Times", serif;
    font-weight: 400;
    font-size: 32px;
    line-height: 110%;
    letter-spacing: 0.06em;
    margin-bottom: 10px;
}

.logo__title_light {
    color: #f1cdb3;
}

.logo__subtitle {
    font-family: "Arial", "Helvetica", sans-serif;
    font-weight: 400;
    font-size: 13px;
    letter-spacing: 0.1em;
}

.logo__subtitle_light {
    color: #fff;
}

.logo__title_dark,
.logo__subtitle_dark {
    color: #545454;
}

/* Header */

.header {
    height: 120px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.header_color_white {
    background-color: #fff;
}

.header-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navigation__burger {
    display: none;
}

.navigation__list {
    display: flex;
    gap: 35px;
    justify-content: flex-end;
}

.navigation__link_normal {
    color: #cdcdcd;
    transition: all 0.3s linear;
}

.navigation__link_current {
    color: #fafafa;
}

.navigation__link_current_dark,
.navigation__link_normal_dark {
    color: #545454;
    transition: all 0.3s linear;
}

.navigation__link_current::after,
.navigation__link_current_dark::after {
    content: "";
    display: block;
    height: 3px;
    width: 100%;
    background-color: #f1cdb3;
}

.navigation__link_normal:hover {
    color: #fafafa;
}

.navigation__link_normal_dark:hover {
    color: #292929;
}

/* Footer */

.footer {
    background-color: #211f20;
    background-image: url("../assets/background/gradient-background.jpg");
    background-repeat: no-repeat;
    position: relative;
}

.footer-wrapper {
    display: flex;
    flex-wrap: wrap;
    gap: 160px;
    min-height: 350px;
    align-items: flex-end;
}

.footer-wrapper::after {
    content: '';
    display: block;
    width: 300px;
    height: 310px;
    background-image: url("../assets/background/footer-puppy.png");
}

.footer__contacts {
    height: 294px;
    display: flex;
    flex-direction: column;
    width: 280px;
    padding-bottom: 60px;
    gap: 42px;
}

.footer__address {
    height: 294px;
    width: 300px;
    padding-bottom: 60px;
}

.footer__heading {
    color: #fff;
}

.footer__text {
    line-height: 117%;
    color: #f1cdb3;
}

.footer__address .footer__heading {
    margin-bottom: 33px;
}

.footer__address address:first-of-type {
    margin-bottom: 36px;
}

.footer__address address {
    position: relative;
    padding-left: 40px;
}

.footer__address address::before {
    content: "";
    position: absolute;
    display: block;
    width: 20px;
    height: 32px;
    left: -1px;
    top: -3px;
    background-image: url("../assets/icons/icon-marker.svg");
    background-repeat: no-repeat;
    background-size: contain;
}

.footer__address address:first-of-type::before {
    top: 7px;
}

a[href="mailto:email@shelter.com"],
a[href="tel:+136745677554"] {
    display: flex;
}

a[href="mailto:email@shelter.com"]::before {
    content: "";
    display: block;
    width: 40px;
    height: 32px;
    margin-right: 20px;
    margin-top: -2px;
    background-image: url("../assets/icons/icon-email.svg");
}

a[href="tel:+136745677554"]::before {
    content: "";
    display: block;
    width: 40px;
    height: 32px;
    margin-right: 20px;
    background-image: url("../assets/icons/icon-phone.svg");
    margin-top: -2px;
}

/* Top */

.top {
    position: relative;
}

.top::after {
    content: "";
    display: block;
    position: absolute;
    min-height: 1165px;
    width: 100%;
    background-color: #211f20;
    background-image: url("../assets/background/gradient-background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    top: -120px;
    z-index: -10;
}

.top-wrapper {
    display: flex;
    justify-content: center;
    padding-top: 60px;
    min-height: 788px;
    gap: 100px;
}

.top-content {
    padding-top: 163px;
    max-width: 460px;
    flex-shrink: 3;
}

.top__heading {
    color: #fff;
    margin-bottom: 42px;
}

.top__text {
    color: #cdcdcd;
    margin-bottom: 42px;
}

.top__image-wrapper {
    display: flex;
    align-items: flex-end;
}

.top__image {
    object-fit: scale-down;
    max-height: 728px;
}

/* About */

.about {
    background-color: #fff;
    padding-top: 80px;
    padding-bottom: 100px;
}

.about-wrapper {
    display: flex;
    justify-content: center;
    gap: 10%;
}

.about__image {
    max-height: 408px;
    object-fit: scale-down;
}

.about-content {
    display: flex;
    flex-direction: column;
    gap: 25px;
    max-width: 430px;
    padding-top: 14px;
    flex-shrink: 3;
}


/* Pets */

.pets,
.pets-catalog {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 80px;
    padding-bottom: 100px;
}

.pets__heading {
    text-align: center;
    margin-bottom: 60px;
}

.pets__card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 28px;
    max-width: 270px;
    height: 435px;
    border-radius: 9px;
    background-color: #fff;
    transition: all 0.3s linear;
    padding-bottom: 30px;
}

.pets__card:hover {
    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
}

.pets__card:hover .button {
    background-color: #fddcc4;
    border-color: #fddcc4;
}

/* Pets Catalog */

.pets__cards {
    display: flex;
    flex-wrap: wrap;
    column-gap: 40px;
    row-gap: 30px;
    justify-content: center;
}

.pets__pagination {
    padding-top: 60px;
}

.pagination__list {
    display: flex;
    gap: 20px;
}
/* ... */

